--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-color: #262838;
     font-size: 22px;
     color: #bbbbbb;
+    line-height: 1.3;
 }
 
 header {
@@ -37,15 +38,8 @@ h1 {
     padding: 0px 10px 5px 10px;
 }
 
-.icons-header>button {
-    background-color: transparent;
-    color: #dbdbdb;
-    border: 2px solid #a492ff;
-    border-radius: 10px 10px 0px 10px;
-    font-size: 20px;
-    padding: 10px 15px 10px 15px;
-    margin-top: 40px;
-    margin-right: 10px;
+.icons-header {
+    margin-top: 20px;
 }
 
 button {
@@ -59,10 +53,11 @@ button {
     border: 2px solid var(--color);
     transition: color 0.5s;
     z-index: 1;
-    font-size: 17px;
-    border-radius: 6px;
     font-weight: 500;
     color: #dbdbdb;
+    font-size: 22px;
+    padding: 10px;
+    border-radius: 10px 10px 0px 10px;
 }
 
 button:before {
@@ -88,12 +83,12 @@ button:before {
 
 button:hover:before {
     top: -30px;
-    left: -30px;
+    left: -20px;
 }
 
-.btn-header:hover img {
-    transition: filter 1s ease;
-    filter: invert(1) sepia(1) saturate(1) hue-rotate(190deg);
+button:hover img {
+    filter: invert(1) sepia(1) saturate(1) hue-rotate(900deg);
+    transition: filter 0.3s ease;
 }
 
 img {
@@ -141,20 +136,12 @@ h2 {
     text-align: center;
     align-items: center;
     padding: 100px 0px 100px 0px;
-} 
+}
 
 .experience {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-
-.experience:first-child { 
-    margin-top: 50px;
-}
-
-.experience:last-child { 
-    margin-bottom: 50px;
 }
 
 .card {
@@ -198,13 +185,14 @@ h2 {
 }
 
 .card-header a:hover {
-    text-decoration: underline;
+    transition: 0.2s;
+    color: #c9c9c9;
 }
 
 .text-about-me {
     width: 700px;
     margin: auto;
-    text-align: justify;
+    text-align: center;
 }
 
 .app {
@@ -282,7 +270,7 @@ span img {
     }
 
     header {
-        padding-top: 300px;
+        padding-top: 250px;
     }
 
     h1 {
@@ -291,5 +279,9 @@ span img {
 
     .text-about-me {
         width: 90%;
+    }
+
+    button {
+        font-size: 14px;
     }
 }
